# mechamelon

./: README.md
.github/workflows/: build.yml
ChameleonChams/: CMakeLists.txt
ChameleonChams/src/: chameleon_chams.cpp  chams_only.cpp  sdk_minimal.cpp
CppSDK/: NameCollisions.inl  SDK.hpp
CppSDK/SDK/: ABP_Bell_classes.hpp  ABP_Bell_parameters.hpp  ABP_BigPen_classes.hpp  ABP_BigPen_parameters.hpp  ABP_BigPen_structs.hpp  ABP_EnemyPenguin_classes.hpp  ABP_EnemyPenguin_parameters.hpp  ABP_EnemyPenguin_structs.hpp  ABP_FPS_HandBone_Ver2_Skeletal_classes.hpp  ABP_FPS_HandBone_Ver2_Skeletal_parameters.hpp  ABP_LINK_Penguin_V2_classes.hpp  ABP_LINK_Penguin_V2_parameters.hpp  ABP_LINK_Penguin_V2_structs.hpp  ABP_MagicHand_classes.hpp  ABP_MagicHand_parameters.hpp  ABP_MiniPenguin_classes.hpp  ABP_MiniPenguin_parameters.hpp  ABP_MiniPenguin_structs.hpp  ABP_Penguin_classes.hpp  ABP_Penguin_parameters.hpp  ABP_Penguin_structs.hpp  AIModule_structs.hpp  ANS_BrunchAttack_classes.hpp  ANS_BrunchAttack_parameters.hpp  ANS_ReadyAttack_classes.hpp  ANS_ReadyAttack_parameters.hpp  ANT_AttackNotify_classes.hpp  ANT_AttackNotify_parameters.hpp  ANT_MovementState_classes.hpp  ANT_MovementState_parameters.hpp  AnimGraphRuntime_structs.hpp  AnimationCore_structs.hpp  Animnotify_PlayfootSteps_classes.hpp  Animnotify_PlayfootSteps_parameters.hpp  AsyncLoadingScreen_classes.hpp  AudioMixer_structs.hpp  AudioWidgets_classes.hpp  AudioWidgets_parameters.hpp  AudioWidgets_structs.hpp  BPC_AIMoveControl_classes.hpp  (+673 more)
